--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bad_tech">
+    package="nekocare.ddns.net">
    <application
-        android:label="bad_tech"
+        android:label="Bad Tech"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
