Updated AndroidManifest.xml for extra permission related to gmap

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nekocare.ddns.net">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
    <application
         android:label="Bad Tech"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDZ1_i3uDD2WQG2mjk3LfxAUisLGUU0dUQ" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,9 +40,5 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-
-        <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyDZ1_i3uDD2WQG2mjk3LfxAUisLGUU0dUQ"/>
     </application>
-    
 </manifest>
